<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="-130dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_login">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_personales"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:gravity="center"/>
    </RelativeLayout>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:gravity="center"
                        android:text="@string/nombre_data"
                        android:textStyle="bold"
                        android:drawablePadding="5dp"
                        android:textColor="@color/white"
                        app:drawableStartCompat="@drawable/ic_profile" />
                    <TextView
                        android:id="@+id/txt_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:gravity="center|right"
                        android:text="@string/name"
                        android:textColor="@color/white" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:gravity="center"
                        android:text="@string/emailD"
                        android:drawablePadding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        app:drawableStartCompat="@drawable/ic_email" />
                    <TextView
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:gravity="center|right"
                        android:text="@string/email"
                        android:textColor="@color/white" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/contactD"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_contact" />
                    <TextView
                        android:id="@+id/txt_contact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:drawablePadding="5dp"
                        android:gravity="center|right"
                        android:text="@string/contact"
                        android:textColor="@color/white" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    app:drawableStartCompat="@drawable/ic_gender"
                    android:textStyle="bold"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/genderD"
                    android:textColor="@color/white" />
                    <TextView
                        android:id="@+id/txt_gender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:gravity="center|right"
                        android:text="@string/gender"
                        android:textColor="@color/white" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center"
                    android:text="@string/birthdayD"
                    android:textStyle="bold"
                    android:drawablePadding="5dp"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_birthday" />
                    <TextView
                        android:id="@+id/txt_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/birthDay"
                        android:gravity="center|right"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>