<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="-200dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_login">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:gravity="center"/>
    </RelativeLayout>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:text="Inicio de Sesión"
                android:textSize="28sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLay_emailAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text">

                <EditText
                    android:id="@+id/txtInput_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user"
                    android:inputType="text"
                    android:maxLines="1"
                    android:backgroundTint="@color/primaryTextColor"
                    android:textColorHint="@color/primaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLay_pass_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconDrawable="@drawable/ic_eye"
                app:endIconMode="password_toggle"
                android:hint="@string/password"
                app:startIconTint="@color/primaryTextColor">

                <EditText
                    android:id="@+id/txt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:backgroundTint="@color/primaryTextColor"
                    android:textColorHint="@color/primaryTextColor" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/prgbar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2sp"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"/>


</LinearLayout>
